edit header styles

--- a/src/components/Navbar.sass
+++ b/src/components/Navbar.sass
@@ -1,7 +1,18 @@
-.navbar-brand
-	.navbar-item
-		color: #333
-		h1
-			font-size: 5vmin
-			font-weight: bold
-			color: #333
+.header
+	background-color: #333
+	.head-navbar
+		background-color: transparent
+		.container
+			.navbar-brand
+				.navbar-item
+					color: #fff
+					h1
+						font-size: 5vmin
+						font-weight: bold
+						color: #fff
+			.navbar-end
+				display: none
+				.navbar-item
+					color: #fff
+				.navbar-item:hover
+					background-color: transparent
