--- a/src/components/PostList.sass
+++ b/src/components/PostList.sass
@@ -1,3 +1,12 @@
+figure
+	.img-pc
+		display: block
+		@media screen and (max-width: 600px)
+			display: none
+	.img-sp
+		display: none
+		@media screen and (max-width: 600px)
+			display: block
 section.section
 	@media screen and (max-width: 600px)
 		padding-right: 10px
