--- a/src/components/Navbar.sass
+++ b/src/components/Navbar.sass
@@ -3,16 +3,19 @@
 	.head-navbar
 		background-color: transparent
 		.container
-			.navbar-brand
-				.navbar-item
-					color: #fff
+			width: 90%
+			margin: 0 auto
+			display: flex
+			justify-content: space-between
+			align-items: center
+			.container-item
+				.container-item-title
 					h1
 						font-size: 5vmin
 						font-weight: bold
 						color: #fff
-			.navbar-end
-				display: none
-				.navbar-item
+				.container-item-pages
 					color: #fff
-				.navbar-item:hover
+					font-weight: bold
+				.container-item-pages:hover
 					background-color: transparent
