--- a/src/components/PostList.sass
+++ b/src/components/PostList.sass
@@ -12,6 +12,9 @@ section.section
 		padding-right: 10px
 		padding-left: 10px
 	.container
+		display: flex
+		flex-direction: column
+		justify-content: center
 		.content
 			.container-content-title
 				font-size: 5vmin
@@ -20,7 +23,7 @@ section.section
 			margin: 0 auto
 			display: flex
 			flex-wrap: wrap
-			justify-content: space-between
+			justify-content: flex-start
 			.content
 				width: 33%
 				display: flex
@@ -32,7 +35,7 @@ section.section
 					width: 98%
 					display: block
 					border: 1px solid #eaecee
-					transition: background-color 0.8s ease-out
+					transition: background-color 0.6s ease-out
 					box-shadow: 5px 5px 5px #333
 					@media screen and (max-width: 600px)
 						box-shadow: none
