--- a/src/templates/page.sass
+++ b/src/templates/page.sass
@@ -5,6 +5,7 @@
 		img
 			height: auto
 			max-width: 100%
+			object-fit: contain
 		img.page-thumbnail-pc
 			display: block
 			@media screen and (max-width: 600px)
