--- a/src/templates/page.sass
+++ b/src/templates/page.sass
@@ -2,6 +2,9 @@
 	.page-thumbnail
 		display: flex
 		justify-content: center
+		align-items: flex-start
+		@media screen and (max-width: 600px)
+			display: block
 		img
 			height: auto
 			max-width: 100%
