--- a/src/templates/page.sass
+++ b/src/templates/page.sass
@@ -24,6 +24,8 @@
 			text-align: right
 			margin-bottom: 40px
 		.page-container-content
+			p
+				text-align: justify
 			figure.wp-block-image
 				@media screen and (max-width: 600px)
 					margin-right: 0
