changed thumbnail image

--- a/src/components/PostList.sass
+++ b/src/components/PostList.sass
@@ -1,4 +1,10 @@
 figure
+	display: flex
+	justify-content: center
+	@media screen and (max-width: 600px)
+		display: block
+	img
+		object-fit: contain
 	.img-pc
 		display: block
 		@media screen and (max-width: 600px)
